# shortCircuit

./: .gitignore  CMakeLists.txt  Component.cpp  Component.hpp  README.md  a.out  build_circuit.cpp  build_test.sh  build_test_circuit.sh  circuit.cpp  circuit.hpp  circuit_input.cpp  component.cpp  component.hpp  components.hpp  components_parser.cpp  components_parser.hpp  components_utils.cpp  components_utils.hpp  diode.cpp  diode.hpp  generate_matrix.hpp  helper_function.cpp  helper_function.hpp  ideas_test.cpp  main.cpp  main_test.cpp  makefile  node.cpp  node.hpp  nodes.hpp  output.txt  parser.cpp  parser.hpp  process_data.cpp  random_test.cpp  sin.cpp  sin.hpp  test.cpp  test_eigen.cpp  (+8 more)
include/: circuit.hpp  component.hpp  components.hpp  components_utils.hpp  linear_components.hpp  node.hpp  nonlinear_components.hpp  parser.hpp
input/: DC_C_L_R.net  DC_C_R.net  DC_L_R.net  Draft1.asc  Draft2.net  MNA_example_input.txt  paralleled_voltages.net  sin.net  sin_C_50_R_50.net  sin_C_L_R.asc  sin_C_L_R.net  sin_C_R.net  sin_D.net  sin_L_R.net  sin_R_C.txt  sin_R_C_input.txt  test_input.net  test_input_2.net  test_input_3.net  test_input_4.net  test_input_5.net  test_input_AC.net  test_input_Capacitor.net  test_input_Inductor.net  test_input_LC.net  test_input_LC_AC.net  test_input_paralleled_voltages.net
input/C/: capacitor.asc  sin_C_10.net  sin_C_160.net  sin_C_20.net  sin_C_320.net  sin_C_40.net  sin_C_640.net  sin_C_80.net
input/L/: inductor.asc  sin_L_10.net  sin_L_160.net  sin_L_20.net  sin_L_320.net  sin_L_40.net  sin_L_640.net  sin_L_80.net
input/R/: resistor.asc  sin_R_10.net  sin_R_160.net  sin_R_20.net  sin_R_320.net  sin_R_40.net  sin_R_640.net  sin_R_80.net
input/node/: nodes_10.net  nodes_131.net  nodes_196.net  nodes_31.net  nodes_329.net  nodes_460.net  nodes_592.net  nodes_64.net
src/: circuit.cpp  component.cpp  components.cpp  components_utils.cpp  linear_components.cpp  node.cpp  nonlinear_components.cpp  parser.cpp
test/: test_capacitor.cpp  test_circuit.cpp  test_components.cpp  test_components_utils.cpp  test_inductor.cpp  test_node.cpp  test_parser.cpp  test_parser_integration.cpp  test_parser_unit.cpp  test_resistor.cpp
test/old/: test_node.cpp  test_parser_unit.cpp
test/performance/: capacitor_performance.sh  inductor_performance.sh  node_performance.sh  resistor_performance.sh
test/performance/sample_result/solve_by_LU/: performance_capacitor  performance_inductor  performance_node  performance_resistor  short_circuit
test/performance/sample_result/solve_by_inversion/: performance_capacitor  performance_inductor  performance_node  performance_resistor  short_circuit
test/performance/sample_result/stats/: CLR Simulation INV-CLR Simulation INV.csv  CLR Simulation INV-CLR Simulation Min Max.csv  CLR Simulation LDLT-CLR Simulation LDLT.csv  CLR Simulation LU-CLR Simulation LU.csv  CLR Simulation ref-CLR Simulation Min Max.csv  CLR Simulation ref-CLR Simulation ref.csv  Time Complexity INV-Capacitor.csv  Time Complexity INV-Inductor.csv  Time Complexity INV-Node.csv  Time Complexity INV-Reference.csv  Time Complexity INV-Resistor.csv
